--- a/project.json
+++ b/project.json
@@ -12133,6 +12133,9 @@
 		},
 		"\\src\\images\\background\\Tile_98.png": {
 			"sdcard": false
+		},
+		"\\DarkRitual_V094.bin": {
+			"sdcard": false
 		}
 	},
 	"BUILDFlags": {
