--- a/project.json
+++ b/project.json
@@ -12136,6 +12136,9 @@
 		},
 		"\\DarkRitual_V094.bin": {
 			"sdcard": false
+		},
+		"\\DarkRitual_V095.bin": {
+			"sdcard": false
 		}
 	},
 	"BUILDFlags": {
