--- a/project.json
+++ b/project.json
@@ -12139,6 +12139,33 @@
 		},
 		"\\DarkRitual_V095.bin": {
 			"sdcard": false
+		},
+		"\\New folder": {
+			"sdcard": false
+		},
+		"\\distributable": {
+			"sdcard": false
+		},
+		"\\distributable\\DarkRitual_Icon_36x36.png": {
+			"sdcard": false
+		},
+		"\\distributable\\DarkRitual_Icon_24x24.png": {
+			"sdcard": false
+		},
+		"\\distributable\\DarkRitual_POPBanner.png": {
+			"sdcard": false
+		},
+		"\\distributable\\DarkRitual_Icon_36x36.h": {
+			"sdcard": false
+		},
+		"\\distributable\\DarkRitual_Icon_24x24.h": {
+			"sdcard": false
+		},
+		"\\distributable\\DarkRitual_POPBanner.h": {
+			"sdcard": false
+		},
+		"\\DarkRitual_V096.bin": {
+			"sdcard": false
 		}
 	},
 	"BUILDFlags": {
