--- a/project.json
+++ b/project.json
@@ -12652,6 +12652,9 @@
 		},
 		"\\V099A.zip": {
 			"sdcard": false
+		},
+		"\\music.zip~RF2ab647c.TMP": {
+			"sdcard": false
 		}
 	},
 	"BUILDFlags": {
