--- a/project.json
+++ b/project.json
@@ -12655,6 +12655,9 @@
 		},
 		"\\music.zip~RF2ab647c.TMP": {
 			"sdcard": false
+		},
+		"\\DarkRitual_V099B.bin": {
+			"sdcard": false
 		}
 	},
 	"BUILDFlags": {
