--- a/project.json
+++ b/project.json
@@ -12661,6 +12661,93 @@
 		},
 		"\\DarkRitual_V099C.bin": {
 			"sdcard": false
+		},
+		"\\DarkRitual_V100.bin": {
+			"sdcard": false
+		},
+		"\\distributable\\DarkRitual_V100.bin": {
+			"sdcard": false
+		},
+		"\\RogueBoy_Pokitto.bin.9.png": {
+			"sdcard": false
+		},
+		"\\RogueBoy_Pokitto.bin.10.png": {
+			"sdcard": false
+		},
+		"\\RogueBoy_Pokitto.bin.11.png": {
+			"sdcard": false
+		},
+		"\\RogueBoy_Pokitto.bin.12.png": {
+			"sdcard": false
+		},
+		"\\distributable\\RogueBoy_Pokitto.bin.2.png": {
+			"sdcard": false
+		},
+		"\\distributable\\RogueBoy_Pokitto.bin.3.png": {
+			"sdcard": false
+		},
+		"\\distributable\\RogueBoy_Pokitto.bin.4.png": {
+			"sdcard": false
+		},
+		"\\distributable\\RogueBoy_Pokitto.bin.5.png": {
+			"sdcard": false
+		},
+		"\\distributable\\RogueBoy_Pokitto.bin.6.png": {
+			"sdcard": false
+		},
+		"\\distributable\\RogueBoy_Pokitto.bin.7.png": {
+			"sdcard": false
+		},
+		"\\distributable\\RogueBoy_Pokitto.bin.8.png": {
+			"sdcard": false
+		},
+		"\\distributable\\RogueBoy_Pokitto.bin.9.png": {
+			"sdcard": false
+		},
+		"\\distributable\\RogueBoy_Pokitto.bin.10.png": {
+			"sdcard": false
+		},
+		"\\distributable\\RogueBoy_Pokitto.bin.12.png": {
+			"sdcard": false
+		},
+		"\\distributable\\RogueBoy_Pokitto.bin.11.png": {
+			"sdcard": false
+		},
+		"\\distributable\\Pic1.png": {
+			"sdcard": false
+		},
+		"\\distributable\\Pic2.png": {
+			"sdcard": false
+		},
+		"\\distributable\\Pic3.png": {
+			"sdcard": false
+		},
+		"\\distributable\\Pic4.png": {
+			"sdcard": false
+		},
+		"\\distributable\\Pic5.png": {
+			"sdcard": false
+		},
+		"\\distributable\\Pic6.png": {
+			"sdcard": false
+		},
+		"\\distributable\\Pic7.png": {
+			"sdcard": false
+		},
+		"\\distributable\\Pic8.png": {
+			"sdcard": false
+		},
+		"\\distributable\\Pic9.png": {
+			"sdcard": false
+		},
+		"\\distributable\\New Text Document.txt": {
+			"sdcard": false
+		},
+		"\\distributable\\Blurb.txt": {
+			"sdcard": false
+		},
+		"\\distributable\\DarkRitual_V100.pop": {
+			"sdcard": false
 		}
 	},
 	"BUILDFlags": {
